--- a/Registry.toml
+++ b/Registry.toml
@@ -4,3 +4,4 @@ repo = "git@github.com:QEDjl-project/registry.git"
 description = "Local registry for the QEDjl-project."
 
 [packages]
+fc3ce04a-5be5-4f3a-acff-eceaab723759 = { name = "QEDevents", path = "Q/QEDevents" }
