--- a/Registry.toml
+++ b/Registry.toml
@@ -4,4 +4,5 @@ repo = "git@github.com:QEDjl-project/registry.git"
 description = "Local registry for the QEDjl-project."
 
 [packages]
+46de9c38-1bb3-4547-a1ec-da24d767fdad = { name = "QEDprocesses", path = "Q/QEDprocesses" }
 fc3ce04a-5be5-4f3a-acff-eceaab723759 = { name = "QEDevents", path = "Q/QEDevents" }
