--- a/Registry.toml
+++ b/Registry.toml
@@ -5,4 +5,5 @@ description = "Local registry for the QEDjl-project."
 
 [packages]
 46de9c38-1bb3-4547-a1ec-da24d767fdad = { name = "QEDprocesses", path = "Q/QEDprocesses" }
+ac3a6c97-e859-4b9f-96bb-63d2a216042c = { name = "QEDfields", path = "Q/QEDfields" }
 fc3ce04a-5be5-4f3a-acff-eceaab723759 = { name = "QEDevents", path = "Q/QEDevents" }
