--- a/Q/QEDprocesses/Package.toml
+++ b/Q/QEDprocesses/Package.toml
@@ -1,3 +1,3 @@
 name = "QEDprocesses"
 uuid = "46de9c38-1bb3-4547-a1ec-da24d767fdad"
-repo = "git@github.com:QEDjl-project/QEDprocesses.jl.git"
+repo = "https://github.com/QEDjl-project/QEDprocesses.jl.git"
