rename QED in QuantumElectrodynamics

--- a/Registry.toml
+++ b/Registry.toml
@@ -7,4 +7,4 @@ description = "Local registry for the QEDjl-project."
 35dc0263-cb5f-4c33-a114-1d7f54ab753e = { name = "QEDcore", path = "Q/QEDcore" }
 46de9c38-1bb3-4547-a1ec-da24d767fdad = { name = "QEDprocesses", path = "Q/QEDprocesses" }
 ac3a6c97-e859-4b9f-96bb-63d2a216042c = { name = "QEDfields", path = "Q/QEDfields" }
-bb1fba1d-cf9b-41b3-874e-4b81465537b9 = { name = "QED", path = "Q/QED" }
+bb1fba1d-cf9b-41b3-874e-4b81465537b9 = { name = "QuantumElectrodynamics", path = "Q/QuantumElectrodynamics" }
