--- a/Q/QuantumElectrodynamics/Compat.toml
+++ b/Q/QuantumElectrodynamics/Compat.toml
@@ -1,2 +1,8 @@
 [0]
-julia = "1.9.0-1"
+julia = "1.6-1"
+Reexport = "1.2"
+QEDbase = "0.2.2"
+QEDcore = "0.1"
+QEDevents = "0.1"
+QEDfields = "0.1"
+QEDprocesses = "0.2"
